fix(header): Fix header not being visible after scroll below banner.

--- a/src/scss/base/_defaults.scss
+++ b/src/scss/base/_defaults.scss
@@ -4,7 +4,6 @@
 
 body,
 html {
-  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -17,9 +16,10 @@ html {
   }
 }
 
-body {
+.body-wrapper {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 main {
